# autotools-tutorial

./: Makefile.am  autogen.sh  configure.ac  main.c  strdup-printf.c  strdup-printf.h  test-my-project  test-strdup-printf.c
